2006-01-29  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (FORCEINLINE): Define.

2006-01-26  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (DECLSPEC_SELECTANY): Define.

2006-01-26  Filip Navara  <xnavara@volny.cz>

	* include/winnt.h (DECLSPEC_ALIGN): Define.

2006-01-24  Danny Smith  <dannysmith@users.sourceforge.net>

        * include/commctrl.h: Correct spelling of 'compatibility' in
	comments.
	* include/setupapi.h: Likewise.
	* include/ws2tcpip.h: Likewise.

2006-01-24  Danny Smith  <dannysmith@users.sourceforge.net>

        * include/ddk/winddk.h (KeGetCurrentKPCR): Support -masm=intel.

2006-01-24  Jiri Malak  <Jiri.Malak@iol.cz>

	WATCOM compatibility changes. 
	* include/ddk/ntddk.h (DECL_IMPORT): Define using __declspec,
	rather than __attribute__.
	(DECL_EXPORT): Likewise.
	* include/ddk/winddk.h (DDKAPI): Avoid using __attribute__.
	(DDKFASTAPI): Likewise.
	(DDKCDECLAPI): Likwise.
	(KeGetCurrentKPCR): Provide __WATCOMC__ syntax for inline code.

2006-01-23  Brandon Sneed  <brandon@redf.net>

	* setupapi.def: Add all CM_* functions defined in ddk/cfgmgr32.h
	to exports.

2006-01-17  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* include/w32api.h: Increment version to 3.6.
	* Makefile.in: Ditto.

2006-01-12  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wincrypt.h (WINADVAPI): Add to prototypes of
	advapi32.dll functions.

2006-01-12  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winsock2.h (struct sockaddr_storage):  Use RFC 2553
	names for padding size constants.

2006-01-12  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/aclapi.h (WINADVAPI): Add to prototypes.
	* include/winreg.h (WINADVAPI): Likewise.
	* include/winsvc.h (WINADVAPI): Likewise.

2006-01-05  Michael Gerdau  <mgd@technosis.de>

	* include/winbase.h (WINADVAPI): Define.

2006-01-03  Christopher Faylor  <cgf@timesys.com>

	* include/winuser.h (CreateWindowStation): Correctly identify first